Theme Colour Added

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,14 +1,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --vs-primary: 139, 112, 205;
+    --vs-success: 170, 150, 218;
+    --vs-danger: 255, 255, 151;
+    --vs-warn: 233,220,201;
+    --vs-dark: 36, 33, 69
   }
 }
