--- a/src/assets/font.css
+++ b/src/assets/font.css
@@ -3,35 +3,41 @@
     src: url('../assets/fonts/webfonts/Outfit-Black.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Outfit-Bold';
     src: url('../assets/fonts/webfonts/Outfit-Bold.woff') format('woff');
     font-weight: normal;
+    font-display: swap;   
     font-style: normal;
 }
 @font-face {
     font-family: 'Outfit-Extra-Bold';
     src: url('../assets/fonts/webfonts/Outfit-ExtraBold.woff') format('woff');
     font-weight: normal;
+    font-display: swap;
     font-style: normal;
 }
 @font-face {
     font-family: 'Outfit-Extra-Light';
     src: url('../assets/fonts/webfonts/Outfit-ExtraLight.woff') format('woff');
     font-weight: normal;
+    font-display: swap;
     font-style: normal;
 }
 @font-face {
     font-family: 'Outfit-Light';
     src: url('../assets/fonts/webfonts/Outfit-Light.woff') format('woff');
     font-weight: normal;
+    font-display: swap;
     font-style: normal;
 }
 @font-face {
     font-family: 'Outfit-Medium';
     src: url('../assets/fonts/webfonts/Outfit-Medium.woff') format('woff');
     font-weight: normal;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -39,5 +45,6 @@
     font-family: 'Aware';
     src: url('../assets/fonts/ttf/AwareBold-qZo3x.ttf');
     font-weight: normal;
+    font-display: swap;
     font-style: normal;
 }
