added background and text color

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,5 +9,7 @@
     --vs-danger: 255, 255, 151;
     --vs-warn: 233,220,201;
     --vs-dark: 38, 31, 56;
+    --bg: 38, 31, 56;
+    --text: 255, 255, 255; 
   }
 }
